--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ msgpack = "^1.0.7"
 bcrypt = "^4.1.2"
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 msgspec = "^0.18.6"
+aiohttp-cors = "^0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
@@ -66,6 +67,10 @@ ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = "configargparse.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "aiohttp_cors.*"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
