Add nginx config

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,12 +14,12 @@ concurrency:
 
 jobs:
   checking:
-    runs-on: ubunt-22.0
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup python 3.122
+      - name: Setup python 3.12
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
