--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,18 +2,21 @@ version: '3.8'
 services:
   db:
     image: postgres:15
-    restart: on-filure
+    restart: on-failure
     ports:
       - "5432:5432"
     environment:
       POSTGRES_USER: $POSTGRES_USER
-      POSTGRES_PASSWORD: $POSTGRESS_PASSWORD
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_DB: $POSTGRES_DB
 
   rest:
     restart: on-failure
-    image: andytakker/industry-game-rest:latest
-    command: python -m industry_game
+    # image: andytakker/industry-game-rest:latest
+    build:
+      dockerfile: ./docker/rest.dockerfile
+      context: .
+    entrypoint: python -m industry_game
     environment:
       APP_API_ADDRESS: 0.0.0.0
       APP_API_PORT: 80
@@ -28,3 +31,17 @@ services:
       APP_SECRET: $APP_SECRET
       APP_PRIVATE_KEY: $APP_PRIVATE_KEY
       APP_PUBLIC_KEY: $APP_PUBLIC_KEY
+
+  frontend:
+    restart: on-failure
+    # image: andytakker/industry-game-frontend:latest
+    build:
+      dockerfile: ./docker/frontend.dockerfile
+      context: .
+      args:
+        BASE_URL: https://vk.com
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - ./ssl_keys:/etc/ssl_keys:ro
