--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ pre-commit = "^3.6.0"
 bandit = "^1.7.7"
 ruff = "^0.2.0"
 aiomisc-pytest = "^1.1.1"
-polyfactory = "^2.14.1"
+factory-boy = "^3.3.0"
 
 [build-system]
 requires = ["poetry-core"]
