--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,13 +9,15 @@ services:
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_DB: $POSTGRES_DB
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
   rest:
     restart: on-failure
-    # image: andytakker/industry-game-rest:latest
-    build:
-      dockerfile: ./docker/rest.dockerfile
-      context: .
+    image: andytakker/industry-game-rest:latest
+    # build:
+    #   dockerfile: ./docker/rest.dockerfile
+    #   context: .
     entrypoint: python -m industry_game
     environment:
       APP_API_ADDRESS: 0.0.0.0
@@ -30,18 +32,21 @@ services:
 
       APP_SECRET: $APP_SECRET
       APP_PRIVATE_KEY: $APP_PRIVATE_KEY
-      APP_PUBLIC_KEY: $APP_PUBLIC_KEY
 
   frontend:
     restart: on-failure
-    # image: andytakker/industry-game-frontend:latest
-    build:
-      dockerfile: ./docker/frontend.dockerfile
-      context: .
-      args:
-        BASE_URL: https://vk.com
+    image: andytakker/industry-game-frontend:latest
+    # # build:
+    # #   dockerfile: ./docker/frontend.dockerfile
+    # #   context: .
+    #   args:
+    #     BASE_URL: https://vk.com
     ports:
       - 80:80
       - 443:443
     volumes:
       - ./ssl_keys:/etc/ssl_keys:ro
+
+volumes:
+  postgres_data:
+    driver: local
