--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
-aiomisc = {extras = ["aiohttp", "uvloop"], version = "^17.3.41"}
+python = "^3.11"
+aiomisc = {extras = ["asgi", "cron", "uvicorn", "uvloop"], version = "^17.5.4"}
 sqlalchemy = "^2.0.25"
 alembic = "^1.13.1"
 python-socketio = "^5.11.0"
@@ -25,6 +25,7 @@ bcrypt = "^4.1.2"
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 msgspec = "^0.18.6"
 aiohttp-cors = "^0.7.0"
+fastapi = "^0.110.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
