--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   db:
     image: postgres:15
@@ -14,21 +13,22 @@ services:
 
   rest:
     restart: on-failure
-    image: andytakker/industry-game-rest:latest
-    # build:
-    #   dockerfile: ./docker/rest.dockerfile
-    #   context: .
+    build:
+      dockerfile: ./docker/rest.dockerfile
+      context: .
     entrypoint: python -m industry_game
+    ports:
+      - 8000:8000
     environment:
-      APP_API_ADDRESS: 0.0.0.0
-      APP_API_PORT: 80
+      APP_API_HOST: 0.0.0.0
+      APP_API_PORT: 8000
 
       APP_PG_DSN: postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
 
       APP_POOL_SIZE: 8
 
       APP_LOG_LEVEL: info
-      APP_LOG_FORMAT: json
+      APP_LOG_FORMAT: plain
 
       APP_SECRET: $APP_SECRET
       APP_PRIVATE_KEY: $APP_PRIVATE_KEY
@@ -43,8 +43,6 @@ services:
     ports:
       - 80:80
       - 443:443
-    volumes:
-      - ./ssl_keys:/etc/ssl_keys:ro
 
 volumes:
   postgres_data:
