--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,5 +1,5 @@
 user nginx;
-worker_processes  1;
+worker_processes  4;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
@@ -21,29 +21,24 @@ http {
     listen 80;
     listen [::]:80;
     server_name localhost;
-    return 301 https://$server_name$request_uri;
-  }
-  server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    server_name localhost;
 
-    ssl_certificate /etc/ssl_keys/fullchain.pem;
-    ssl_certificate_key /etc/ssl_keys/privkey.pem;
-
-    location /api/ {
-        proxy_pass http://rest:80;
+    location ~ ^/(api|docs|play)/ {
+        proxy_pass http://rest:8000;
         proxy_set_header HOST $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location / {
+    location ~ {
       root   /app;
       index  index.html;
       try_files $uri $uri/ /index.html;
     }
-    error_page   500 502 503 504  /50x.html;
+    error_page 500 502 503 504 /50x.html;
     location = /50x.html {
       root   /usr/share/nginx/html;
     }
+
   }
 }
