--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 msgspec = "^0.18.6"
 aiohttp-cors = "^0.7.0"
 fastapi = "^0.110.1"
+jinja2 = "^3.1.4"
+python-multipart = "^0.0.9"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
